adds coverall badge

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Coverage Status](https://coveralls.io/repos/github/tiarno/plastex/badge.svg?branch=master)](https://coveralls.io/github/tiarno/plastex?branch=master)
+
 
 Read more at the github page for the plasTeX project:  http://tiarno.github.io/plastex/
 
